groupBy with maxBy sample added